--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+/* livvic-600 - latin */
+@font-face {
+  font-family: "Livvic";
+  font-style: normal;
+  font-weight: 600;
+  src: local(""), url("../fonts/livvic-v13-latin-600.woff2") format("woff2"), url("../fonts/livvic-v13-latin-600.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* livvic-700 - latin */
+@font-face {
+  font-family: "Livvic";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""), url("../fonts/livvic-v13-latin-700.woff2") format("woff2"), url("../fonts/livvic-v13-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
 ========================================================================== */
@@ -6,10 +20,8 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
-  line-height: 1.15;
-  /* 1 */
-  -webkit-text-size-adjust: 100%;
-  /* 2 */
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -44,12 +56,9 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -57,10 +66,8 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -77,13 +84,10 @@ a {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */
+          text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -101,10 +105,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
@@ -154,14 +156,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -229,18 +227,12 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
@@ -263,10 +255,8 @@ textarea {
  */
 [type=checkbox],
 [type=radio] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -282,10 +272,8 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type=search] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -300,10 +288,8 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -336,4 +322,371 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+html {
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main {
+  flex-grow: 1;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.container {
+  width: 100%;
+  max-width: 1150px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+@media only screen and (max-width: 965px) and (min-width: 575px) {
+  .container {
+    pad: 0 40px;
+  }
+}
+@media only screen and (max-width: 576px) and (min-width: 375px) {
+  .container {
+    pad: 0 24px;
+  }
+}
+.site-header {
+  padding: 73px;
+  background-color: #014e56;
+}
+
+.site-header__inner {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: block;
+  margin-right: 80px;
+}
+
+.navbar__list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.navbar__item + .navbar__item {
+  margin-left: 40px;
+}
+
+.navbar__link {
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 156%;
+  color: #ffffff;
+}
+
+.header__link {
+  display: inline-block;
+  padding: 9px 9px 9px 9px;
+  width: 100%;
+  max-width: 153px;
+  margin-left: auto;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 24px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.header__link:hover {
+  background-color: #ffffff;
+  color: #002529;
+  transition: all 0.3s ease;
+}
+
+.header__link:active {
+  background-color: transparent;
+  color: #ffffff;
+  opacity: 0.25;
+  transition: all 0.3s ease;
+}
+
+.btn {
+  display: none;
+}
+
+@media only screen and (max-width: 800px) {
+  .logo {
+    width: 128px;
+    margin-right: 48px;
+  }
+  .btn {
+    display: none;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .logo {
+    margin-right: 38px;
+  }
+  .navbar__item + .navbar__item {
+    margin-left: 20px;
+  }
+  .header__link {
+    padding: 6px 6px 6px 6px;
+    width: 100%;
+    max-width: 110px;
+  }
+  .btn {
+    display: none;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .site-header {
+    padding: 48px 0;
+  }
+  .navbar {
+    display: none;
+  }
+  .header__link {
+    display: none;
+  }
+  .btn {
+    display: block;
+    margin-left: auto;
+    border: none;
+    background-color: transparent;
+    color: #ffffff;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .site-header {
+    padding: 48px 0;
+  }
+}
+.hero {
+  position: relative;
+  padding: 56px 0 250px 0;
+  background-color: #014e56;
+}
+
+.hero::before {
+  position: absolute;
+  top: calc(50% - 200px);
+  left: calc(50% - 770px);
+  width: 100px;
+  height: 200px;
+  background-image: url("../images/header-bg-left1x.png");
+  content: "";
+}
+
+.hero::after {
+  position: absolute;
+  right: calc(50% - 555px);
+  bottom: calc(50% - 253px);
+  width: 358px;
+  height: 100px;
+  background-image: url("../images/header-bg-bottom1x.png");
+  content: "";
+}
+
+.hero__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.title-wrapper {
+  width: 50%;
+  max-width: 635px;
+  margin-right: 30px;
+}
+
+.hero__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 100%;
+  color: #ffffff;
+}
+
+.title-red {
+  color: #f67e7e;
+}
+
+.text-wrapper {
+  position: relative;
+  padding-top: 79px;
+  width: 100%;
+  max-width: 445px;
+}
+
+.hero__text {
+  margin: 0;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 156%;
+  color: #ffffff;
+}
+
+.line {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 50px;
+  height: 4px;
+  background-color: #79c8c7;
+}
+
+@media only screen and (max-width: 965px) {
+  .title-wrapper {
+    width: 40%;
+    max-width: 600px;
+    margin-right: 25px;
+  }
+  .hero__title {
+    font-size: 80px;
+  }
+  .text-wrapper {
+    padding-top: 49px;
+    max-width: 425px;
+  }
+  .hero__text {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 924px) {
+  .title-wrapper {
+    width: 40%;
+    max-width: 500px;
+    margin-right: 20px;
+  }
+  .hero__title {
+    font-size: 70px;
+  }
+  .text-wrapper {
+    padding-top: 39px;
+    max-width: 400px;
+  }
+  .hero__text {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .hero {
+    padding: 48px 0 256px 0;
+  }
+  .hero__inner {
+    flex-direction: column;
+  }
+  .hero::before {
+    display: none;
+  }
+  .hero::after {
+    position: absolute;
+    right: calc(50% - 190px);
+    bottom: calc(50% - 264px);
+    background-image: url("../images/header-bg-bottom1x.png");
+  }
+  .title-wrapper {
+    width: 40%;
+    max-width: 638px;
+    margin-bottom: 24px;
+  }
+  .hero__title {
+    text-align: center;
+    font-size: 64px;
+  }
+  .text-wrapper {
+    max-width: 457px;
+    padding: 0;
+  }
+  .hero__text {
+    text-align: center;
+    font-size: 15px;
+  }
+  .line {
+    display: none;
+  }
+}
+@media only screen and (max-width: 747px) {
+  .title-wrapper {
+    width: 40%;
+    max-width: 580px;
+    margin-bottom: 24px;
+  }
+  .hero__title {
+    text-align: center;
+    font-size: 54px;
+  }
+  .text-wrapper {
+    max-width: 417px;
+    padding: 0;
+  }
+  .hero__text {
+    text-align: center;
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 737px) {
+  .title-wrapper {
+    width: 37%;
+    max-width: 520px;
+    margin-bottom: 18px;
+  }
+  .hero__title {
+    text-align: center;
+    font-size: 44px;
+  }
+  .text-wrapper {
+    max-width: 400px;
+    padding: 0;
+  }
+  .hero__text {
+    text-align: center;
+    font-size: 15px;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .hero::before {
+    background-image: url("../images/header-bg-left@2x.png");
+  }
+  .hero::after {
+    background-image: url("../images/header-bg-bottom@2x.png");
+  }
 }/*# sourceMappingURL=main.css.map */
