--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -1,6 +1,18 @@
 .container {
   width: 100%;
-  //max-width: ;
+  max-width: 1150px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+@media only screen and (max-width: 965px) and (min-width: 575px) {
+  .container {
+    pad: 0 40px;
+  }
+}
+
+@media only screen and (max-width: 576px) and (min-width: 375px) {
+  .container {
+    pad: 0 24px;
+  }
 }
