--- a/css/main.css
+++ b/css/main.css
@@ -693,6 +693,8 @@ main {
     position: absolute;
     right: calc(50% - 183px);
     bottom: calc(50% - 296px);
+    width: 258px;
+    height: 80px;
     background-image: url("../images/header-bg-bottom1x.png");
   }
   .title-wrapper {
