--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -218,6 +218,8 @@
     position: absolute;
     right: calc(50% - 183px);
     bottom: calc(50% - 296px);
+    width: 258px;
+    height: 80px;
     background-image: url("../images/header-bg-bottom1x.png");
   }
 
