--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ main {
   padding: 0 20px;
 }
 
-@media only screen and (max-width: 965px) and (min-width: 575px) {
+@media only screen and (max-width: 956px) and (min-width: 576px) {
   .container {
     pad: 0 40px;
   }
@@ -450,29 +450,13 @@ main {
   display: none;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 768px) {
+  .site-header {
+    padding: 64px 0;
+  }
   .logo {
-    width: 128px;
     margin-right: 48px;
-  }
-  .btn {
-    display: none;
-  }
-}
-@media only screen and (max-width: 660px) {
-  .logo {
-    margin-right: 38px;
-  }
-  .navbar__item + .navbar__item {
-    margin-left: 20px;
-  }
-  .header__link {
-    padding: 6px 6px 6px 6px;
-    width: 100%;
-    max-width: 110px;
-  }
-  .btn {
-    display: none;
+    width: 128px;
   }
 }
 @media only screen and (max-width: 576px) {
@@ -491,11 +475,6 @@ main {
     border: none;
     background-color: transparent;
     color: #ffffff;
-  }
-}
-@media only screen and (max-width: 375px) {
-  .site-header {
-    padding: 48px 0;
   }
 }
 .hero {
@@ -573,144 +552,228 @@ main {
   background-color: #79c8c7;
 }
 
-@media only screen and (max-width: 965px) {
+@media only screen and (max-width: 956px) {
+  .hero::before {
+    display: none;
+  }
   .title-wrapper {
-    width: 40%;
+    width: 48%;
     max-width: 600px;
-    margin-right: 25px;
   }
   .hero__title {
     font-size: 80px;
   }
   .text-wrapper {
-    padding-top: 49px;
+    padding-top: 50px;
     max-width: 425px;
   }
-  .hero__text {
-    font-size: 16px;
-  }
 }
-@media only screen and (max-width: 924px) {
+@media only screen and (max-width: 850px) {
+  .hero::before {
+    display: none;
+  }
   .title-wrapper {
-    width: 40%;
-    max-width: 500px;
-    margin-right: 20px;
+    width: 49%;
+    max-width: 590px;
   }
   .hero__title {
     font-size: 70px;
   }
   .text-wrapper {
-    padding-top: 39px;
-    max-width: 400px;
-  }
-  .hero__text {
-    font-size: 15px;
+    padding-top: 50px;
+    max-width: 410px;
   }
 }
 @media only screen and (max-width: 800px) {
   .hero {
     padding: 48px 0 256px 0;
-  }
-  .hero__inner {
-    flex-direction: column;
+    background-color: #014e56;
   }
   .hero::before {
     display: none;
   }
   .hero::after {
-    position: absolute;
-    right: calc(50% - 190px);
-    bottom: calc(50% - 264px);
-    background-image: url("../images/header-bg-bottom1x.png");
+    right: 0;
+    left: 0;
+    top: 425px;
+    bottom: 0;
+    margin: 0 auto;
+  }
+  .hero__inner {
+    flex-direction: column;
   }
   .title-wrapper {
     width: 40%;
-    max-width: 638px;
+    max-width: 683px;
     margin-bottom: 24px;
   }
   .hero__title {
-    text-align: center;
     font-size: 64px;
+    line-height: 88%;
+    text-align: center;
   }
   .text-wrapper {
+    padding-top: 0;
+    width: 100%;
     max-width: 457px;
-    padding: 0;
   }
   .hero__text {
-    text-align: center;
     font-size: 15px;
+    line-height: 187%;
+    text-align: center;
   }
   .line {
     display: none;
   }
 }
 @media only screen and (max-width: 747px) {
+  .hero::after {
+    right: 0;
+    left: 0;
+    top: 414px;
+    bottom: 0;
+    margin: 0 auto;
+  }
   .title-wrapper {
     width: 40%;
-    max-width: 580px;
+    max-width: 660px;
     margin-bottom: 24px;
   }
   .hero__title {
+    font-size: 58px;
     text-align: center;
-    font-size: 54px;
   }
   .text-wrapper {
-    max-width: 417px;
-    padding: 0;
+    padding-top: 0;
+    width: 100%;
+    max-width: 430px;
   }
   .hero__text {
-    text-align: center;
     font-size: 15px;
+    text-align: center;
   }
 }
-@media only screen and (max-width: 737px) {
+@media only screen and (max-width: 681px) {
+  .hero::after {
+    right: 0;
+    left: 0;
+    top: 400px;
+    bottom: 0;
+    margin: 0 auto;
+  }
   .title-wrapper {
-    width: 37%;
-    max-width: 520px;
-    margin-bottom: 18px;
+    width: 40%;
+    max-width: 600px;
+    margin-bottom: 20px;
   }
   .hero__title {
+    font-size: 52px;
     text-align: center;
-    font-size: 44px;
   }
   .text-wrapper {
+    padding-top: 0;
+    width: 100%;
     max-width: 400px;
-    padding: 0;
   }
   .hero__text {
-    text-align: center;
     font-size: 15px;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 614px) {
+  .hero::after {
+    right: 0;
+    left: 0;
+    top: 393px;
+    bottom: 0;
+    margin: 0 auto;
+  }
+  .title-wrapper {
+    width: 40%;
+    max-width: 560px;
+    margin-bottom: 20px;
+  }
+  .hero__title {
+    font-size: 48px;
+    text-align: center;
+  }
+  .text-wrapper {
+    padding-top: 0;
+    width: 100%;
+    max-width: 380px;
+  }
+  .hero__text {
+    font-size: 15px;
+    text-align: center;
   }
 }
 @media only screen and (max-width: 576px) {
   .hero {
-    padding: 38px 0 197px 0;
-  }
-  .hero::before {
-    display: none;
+    padding: 32px 0 197px 0;
   }
   .hero::after {
-    position: absolute;
-    right: calc(50% - 180px);
-    bottom: calc(50% - 248px);
-    width: 258px;
-    height: 80px;
-    background-image: url("../images/header-bg-bottom1x.png");
+    right: 0;
+    left: 0;
+    top: 337px;
+    bottom: 0;
+    margin: 0 auto;
   }
   .title-wrapper {
+    width: 50%;
+    max-width: 400px;
+    margin-bottom: 18px;
+  }
+  .hero__title {
+    font-size: 44px;
+    text-align: center;
+  }
+  .text-wrapper {
+    padding-top: 0;
+    width: 100%;
+    max-width: 327px;
+  }
+  .hero__text {
+    font-size: 15px;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 464px) {
+  .hero {
+    padding: 32px 0 197px 0;
+  }
+  .hero::after {
+    right: 0;
+    left: 0;
+    top: 330px;
+    bottom: 0;
+    margin: 0 auto;
+  }
+  .title-wrapper {
+    width: 50%;
     max-width: 327px;
     margin-bottom: 18px;
   }
   .hero__title {
     font-size: 40px;
+    text-align: center;
   }
   .text-wrapper {
+    padding-top: 0;
+    width: 100%;
     max-width: 327px;
-    padding: 0;
   }
   .hero__text {
-    text-align: center;
     font-size: 15px;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 392px) {
+  .hero::after {
+    right: 0;
+    left: 0;
+    top: 365px;
+    bottom: 0;
+    margin: 0 auto;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
