--- a/css/main.css
+++ b/css/main.css
@@ -556,6 +556,10 @@ main {
   .hero::before {
     display: none;
   }
+  .hero::after {
+    right: calc(50% - 477px);
+    bottom: calc(50% - 234px);
+  }
   .title-wrapper {
     width: 48%;
     max-width: 600px;
@@ -571,6 +575,10 @@ main {
 @media only screen and (max-width: 850px) {
   .hero::before {
     display: none;
+  }
+  .hero::after {
+    right: calc(50% - 424px);
+    bottom: calc(50% - 235px);
   }
   .title-wrapper {
     width: 49%;
