--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -77,6 +77,11 @@
     display: none;
   }
 
+  .hero::after {
+    right: calc(50% - 477px);
+    bottom: calc(50% - 234px);
+  }
+
   .title-wrapper {
     width: 48%;
     max-width: 600px;
@@ -95,6 +100,11 @@
 @media only screen and (max-width: 850px) {
   .hero::before {
     display: none;
+  }
+
+  .hero::after {
+    right: calc(50% - 424px);
+    bottom: calc(50% - 235px);
   }
 
   .title-wrapper {
