--- a/css/main.css
+++ b/css/main.css
@@ -727,7 +727,7 @@ main {
     margin: 0 auto;
   }
   .title-wrapper {
-    width: 50%;
+    width: 45%;
     max-width: 400px;
     margin-bottom: 18px;
   }
@@ -743,6 +743,13 @@ main {
   .hero__text {
     font-size: 15px;
     text-align: center;
+  }
+}
+@media only screen and (max-width: 472px) {
+  .title-wrapper {
+    width: 50%;
+    max-width: 400px;
+    margin-bottom: 18px;
   }
 }
 @media only screen and (max-width: 464px) {
@@ -779,9 +786,14 @@ main {
   .hero::after {
     right: 0;
     left: 0;
-    top: 365px;
+    top: 330px;
     bottom: 0;
     margin: 0 auto;
+  }
+  .title-wrapper {
+    width: 60%;
+    max-width: 327px;
+    margin-bottom: 18px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
