Add all images, scss files and new sections

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,5 +1,7 @@
-@import "visually-hidden";
-@import "container";
-@import "header";
-@import "hero";
-@import "footer";
+@import 'visually-hidden';
+@import 'container';
+@import 'header';
+@import 'hero';
+@import 'build';
+@import 'stories';
+@import 'footer';
