--- a/css/main.css
+++ b/css/main.css
@@ -340,6 +340,7 @@ body {
   flex-direction: column;
   height: 100%;
   margin: 0;
+  font-family: "Livvic", "Arial", sans-serif;
 }
 
 img {
@@ -372,12 +373,12 @@ main {
   padding: 0 20px;
 }
 
-@media only screen and (max-width: 956px) and (min-width: 576px) {
+@media only screen and (max-witdh: 768px) and (min-width: 576px) {
   .container {
     pad: 0 40px;
   }
 }
-@media only screen and (max-width: 576px) and (min-width: 375px) {
+@media only screen and (max-witdh: 576px) and (min-width: 375px) {
   .container {
     pad: 0 24px;
   }
@@ -486,7 +487,7 @@ main {
 .hero::before {
   position: absolute;
   top: calc(50% - 200px);
-  left: calc(50% - 770px);
+  left: calc(50% - 844px);
   width: 100px;
   height: 200px;
   background-image: url("../images/header-bg-left1x.png");
@@ -552,58 +553,17 @@ main {
   background-color: #79c8c7;
 }
 
-@media only screen and (max-width: 956px) {
-  .hero::before {
-    display: none;
-  }
-  .hero::after {
-    right: calc(50% - 477px);
-    bottom: calc(50% - 234px);
-  }
-  .title-wrapper {
-    width: 48%;
-    max-width: 600px;
-  }
-  .hero__title {
-    font-size: 80px;
-  }
-  .text-wrapper {
-    padding-top: 50px;
-    max-width: 425px;
-  }
-}
-@media only screen and (max-width: 850px) {
-  .hero::before {
-    display: none;
-  }
-  .hero::after {
-    right: calc(50% - 424px);
-    bottom: calc(50% - 235px);
-  }
-  .title-wrapper {
-    width: 49%;
-    max-width: 590px;
-  }
-  .hero__title {
-    font-size: 70px;
-  }
-  .text-wrapper {
-    padding-top: 50px;
-    max-width: 410px;
-  }
-}
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 768px) {
   .hero {
     padding: 48px 0 256px 0;
-    background-color: #014e56;
   }
   .hero::before {
     display: none;
   }
   .hero::after {
+    top: 426px;
     right: 0;
     left: 0;
-    top: 425px;
     bottom: 0;
     margin: 0 auto;
   }
@@ -611,13 +571,12 @@ main {
     flex-direction: column;
   }
   .title-wrapper {
-    width: 40%;
+    width: 50%;
     max-width: 683px;
     margin-bottom: 24px;
   }
   .hero__title {
     font-size: 64px;
-    line-height: 88%;
     text-align: center;
   }
   .text-wrapper {
@@ -627,173 +586,36 @@ main {
   }
   .hero__text {
     font-size: 15px;
-    line-height: 187%;
     text-align: center;
   }
   .line {
     display: none;
   }
 }
-@media only screen and (max-width: 747px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 414px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-  .title-wrapper {
-    width: 40%;
-    max-width: 660px;
-    margin-bottom: 24px;
-  }
-  .hero__title {
-    font-size: 58px;
-    text-align: center;
-  }
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 430px;
-  }
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-@media only screen and (max-width: 681px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 400px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-  .title-wrapper {
-    width: 40%;
-    max-width: 600px;
-    margin-bottom: 20px;
-  }
-  .hero__title {
-    font-size: 52px;
-    text-align: center;
-  }
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 400px;
-  }
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-@media only screen and (max-width: 614px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 393px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-  .title-wrapper {
-    width: 40%;
-    max-width: 560px;
-    margin-bottom: 20px;
-  }
-  .hero__title {
-    font-size: 48px;
-    text-align: center;
-  }
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 380px;
-  }
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
 @media only screen and (max-width: 576px) {
   .hero {
     padding: 32px 0 197px 0;
   }
+  .hero::before {
+    display: none;
+  }
   .hero::after {
+    top: 321px;
     right: 0;
     left: 0;
-    top: 337px;
     bottom: 0;
     margin: 0 auto;
   }
   .title-wrapper {
-    width: 45%;
-    max-width: 400px;
-    margin-bottom: 18px;
-  }
-  .hero__title {
-    font-size: 44px;
-    text-align: center;
-  }
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 327px;
-  }
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-@media only screen and (max-width: 472px) {
-  .title-wrapper {
-    width: 50%;
-    max-width: 400px;
-    margin-bottom: 18px;
-  }
-}
-@media only screen and (max-width: 464px) {
-  .hero {
-    padding: 32px 0 197px 0;
-  }
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 330px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-  .title-wrapper {
-    width: 50%;
+    width: 40%;
     max-width: 327px;
     margin-bottom: 18px;
   }
   .hero__title {
     font-size: 40px;
-    text-align: center;
   }
   .text-wrapper {
-    padding-top: 0;
-    width: 100%;
     max-width: 327px;
-  }
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-@media only screen and (max-width: 392px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 330px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-  .title-wrapper {
-    width: 60%;
-    max-width: 327px;
-    margin-bottom: 18px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
@@ -802,5 +624,396 @@ main {
   }
   .hero::after {
     background-image: url("../images/header-bg-bottom@2x.png");
+  }
+}
+.build {
+  position: relative;
+  padding: 140px 0;
+  background-color: #012f34;
+}
+
+.build::after {
+  position: absolute;
+  right: calc(50% - 844px);
+  bottom: calc(50% - 314px);
+  width: 100px;
+  height: 244px;
+  background-image: url("../images/build-after-bg1x.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.build__inner {
+  display: flex;
+  justify-content: center;
+}
+
+.build__content {
+  width: 100%;
+  max-width: 445px;
+  margin-right: 125px;
+}
+
+.build__line {
+  display: block;
+  margin-bottom: 54px;
+  width: 50px;
+  height: 4px;
+  background-color: #f67e7e;
+}
+
+.build__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  color: #ffffff;
+}
+
+.build__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.build__item {
+  position: relative;
+  width: 540px;
+  padding-left: 95px;
+}
+
+.build__item + .build__item {
+  margin-top: 32px;
+}
+
+.build__item::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 72px;
+  height: 72px;
+  background-image: url("../images/build-exper1x.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.build__item:nth-child(2)::before {
+  background-image: url("../images/build-easy1x.png");
+}
+
+.build__item:nth-child(3)::before {
+  background-image: url("../images/build-enhan1x.png");
+}
+
+.build__item-title {
+  margin: 0;
+  margin-bottom: 16px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 156%;
+  color: #f67e7e;
+}
+
+.build__item-text {
+  margin: 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 167%;
+  color: #ffffff;
+  opacity: 0.8;
+}
+
+@media only screen and (max-width: 768px) {
+  .build {
+    padding: 100px 0 100px 98px;
+  }
+  .build::after {
+    top: calc(50% - 355px);
+    right: calc(50% - 384px);
+  }
+  .build__inner {
+    flex-direction: column;
+  }
+  .build__content {
+    width: 100%;
+    max-width: 445px;
+    margin-bottom: 64px;
+  }
+  .build__line {
+    margin-bottom: 32px;
+  }
+  .build__title {
+    font-size: 32px;
+    line-height: 100%;
+  }
+  .build__item {
+    width: 573px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .build {
+    padding: 64px 0 64px 24px;
+  }
+  .build::after {
+    top: calc(50% - 536px);
+    right: calc(50% - 288px);
+  }
+  .build__content {
+    width: 100%;
+    max-width: 240px;
+    margin-bottom: 56px;
+  }
+  .build__title {
+    text-align: start;
+  }
+  .build__item {
+    width: 327px;
+    padding-left: 0;
+    padding-top: 88px;
+    margin: 0 auto;
+  }
+  .build__item::before {
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+  }
+  .build__item + .build__item {
+    margin-top: 48px;
+  }
+  .build__item-title {
+    margin-bottom: 8px;
+    text-align: center;
+  }
+  .build__item-text {
+    text-align: center;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .build::after {
+    background-image: url("../images/build-after-bg@2x.png");
+  }
+  .build__item::before {
+    background-image: url("../images/build-exper@2x.png");
+  }
+  .build__item:nth-child(2)::before {
+    background-image: url("../images/build-easy@2x.png");
+  }
+  .build__item:nth-child(3)::before {
+    background-image: url("../images/build-enhan@2x.png");
+  }
+}
+.stories {
+  position: relative;
+  padding: 140px 0 245px 0;
+  background-color: #004047;
+}
+
+.stories::before {
+  position: absolute;
+  top: calc(50% - 372px);
+  left: calc(50% - 844px);
+  width: 147px;
+  height: 100px;
+  background-image: url("../images/stories-before-bg1x.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.stories::after {
+  position: absolute;
+  right: calc(50% - 844px);
+  bottom: calc(50% - 372px);
+  width: 200px;
+  height: 100px;
+  background-image: url("../images/stories-after-bg1x.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.title-wrapper {
+  width: 100%;
+  max-width: 932px;
+  margin: 0 auto;
+}
+
+.stories__title {
+  margin: 0;
+  margin-bottom: 92px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  text-align: center;
+  color: #ffffff;
+}
+
+.title-color {
+  display: inline-block;
+  color: #79c8c7;
+}
+
+.stories__list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  justify-content: center;
+}
+
+.stories__item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+}
+
+.stories__item + .stories__item {
+  margin-left: 30px;
+}
+
+.stories__item::before {
+  position: absolute;
+  top: calc(50% - 121px);
+  left: calc(50% - 34px);
+  width: 67px;
+  height: 56px;
+  background-image: url("../images/kavichka.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.stories__item::after {
+  position: absolute;
+  left: calc(50% - 34px);
+  bottom: calc(50% - 180px);
+  width: 62px;
+  height: 62px;
+  background-image: url("../images/Oval_11x.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.stories__item:nth-child(2)::after {
+  background-image: url("../images/Oval_21x.png");
+}
+
+.stories__item:nth-child(3)::after {
+  background-image: url("../images/Oval_31x.png");
+}
+
+.stories__item-text {
+  z-index: 1;
+  margin: 0;
+  margin-bottom: 24px;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 167%;
+  text-align: center;
+  color: #ffffff;
+}
+
+.stories__item-str {
+  margin-bottom: 2px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 156%;
+  text-align: center;
+  color: #79c8c7;
+}
+
+.stories__item-italic {
+  font-size: 13px;
+  line-height: 138%;
+  text-align: center;
+  color: #ffffff;
+}
+
+@media only screen and (max-width: 768px) {
+  .stories {
+    padding: 100px 98px 178px 97px;
+  }
+  .stories::before {
+    top: calc(50% - 603px);
+    left: calc(50% - 384px);
+  }
+  .stories::after {
+    right: calc(50% - 384px);
+    bottom: calc(50% - 602px);
+  }
+  .title-wrapper {
+    width: 100%;
+    max-width: 573px;
+  }
+  .stories__title {
+    margin-bottom: 84px;
+    font-size: 32px;
+  }
+  .stories__list {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .stories__item {
+    width: 100%;
+    max-width: 573px;
+  }
+  .stories__item + .stories__item {
+    margin-top: 140px;
+    margin-left: 0;
+  }
+  .stories__item::before {
+    top: calc(50% - 112px);
+    left: calc(50% - 34px);
+  }
+  .stories__item::after {
+    left: calc(50% - 34px);
+    bottom: calc(50% - 190px);
+    margin-bottom: 48px;
+  }
+  .stories__item-text {
+    margin-bottom: 16px;
+  }
+  .stories__item-italic {
+    margin-bottom: 16px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .stories {
+    padding: 140px 24px 242px;
+  }
+  .stories::before {
+    top: calc(50% - 655px);
+    left: calc(50% - 286px);
+  }
+  .stories::after {
+    right: calc(50% - 287px);
+    bottom: calc(50% - 653px);
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .stories::before {
+    background-image: url("../images/stories-before-bg@2x.png");
+  }
+  .stories::after {
+    background-image: url("../images/stories-after-bg@2x.png");
+  }
+  .stories__item::before {
+    background-image: url("../images/kavichka@2x.png");
+  }
+  .stories__item::after {
+    background-image: url("../images/Oval_1@2x.png");
+  }
+  .stories__item:nth-child(2)::after {
+    background-image: url("../images/Oval_2@2x.png");
+  }
+  .stories__item:nth-child(3)::after {
+    background-image: url("../images/Oval_3@2x.png");
   }
 }/*# sourceMappingURL=main.css.map */
