--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -8,3 +8,15 @@
   padding: 0;
   list-style-type: none;
 }
+
+@mixin container($max-width, $min-width) {
+  @media only screen and (max-witdh: $max-width) and (min-width: $min-width) {
+    @content;
+  }
+}
+
+@mixin max-width($max-width) {
+  @media only screen and (max-width: $max-width) {
+    @content;
+  }
+}
