--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,96 +1,96 @@
 .site-header {
-  padding: 73px;
-  background-color: #014e56;
+	padding: 73px;
+	background-color: #014e56;
 }
 
 .site-header__inner {
-  @include display-starter;
+	@include display-starter;
 }
 
 .logo {
-  display: block;
-  margin-right: 80px;
+	display: block;
+	margin-right: 80px;
 }
 
 .navbar__list {
-  @include display-starter;
-  @include list-styles;
+	@include display-starter;
+	@include list-styles;
 }
 
 .navbar__item + .navbar__item {
-  margin-left: 40px;
+	margin-left: 40px;
 }
 
 .navbar__link {
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 156%;
-  color: #ffffff;
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 156%;
+	color: #ffffff;
 }
 
 .header__link {
-  display: inline-block;
-  padding: 9px 9px 9px 9px;
-  width: 100%;
-  max-width: 153px;
-  margin-left: auto;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 28px;
-  color: #ffffff;
-  border: 2px solid #ffffff;
-  border-radius: 24px;
-  text-decoration: none;
-  text-align: center;
+	display: inline-block;
+	padding: 9px 9px 9px 9px;
+	width: 100%;
+	max-width: 153px;
+	margin-left: auto;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 28px;
+	color: #ffffff;
+	border: 2px solid #ffffff;
+	border-radius: 24px;
+	text-decoration: none;
+	text-align: center;
 }
 
 .header__link:hover {
-  background-color: #ffffff;
-  color: #002529;
-  transition: all 0.3s ease;
+	background-color: #ffffff;
+	color: #002529;
+	transition: all 0.3s ease;
 }
 
 .header__link:active {
-  background-color: transparent;
-  color: #ffffff;
-  opacity: 0.25;
-  transition: all 0.3s ease;
+	background-color: transparent;
+	color: #ffffff;
+	opacity: 0.25;
+	transition: all 0.3s ease;
 }
 
 .btn {
-  display: none;
+	display: none;
 }
 
-@media only screen and (max-width: 768px) {
-  .site-header {
-    padding: 64px 0;
-  }
+@include max-width(768px) {
+	.site-header {
+		padding: 64px 0;
+	}
 
-  .logo {
-    margin-right: 48px;
-    width: 128px;
-  }
+	.logo {
+		margin-right: 48px;
+		width: 128px;
+	}
 }
 
-@media only screen and (max-width: 576px) {
-  .site-header {
-    padding: 48px 0;
-  }
+@include max-width(576px) {
+	.site-header {
+		padding: 48px 0;
+	}
 
-  .navbar {
-    display: none;
-  }
+	.navbar {
+		display: none;
+	}
 
-  .header__link {
-    display: none;
-  }
+	.header__link {
+		display: none;
+	}
 
-  .btn {
-    display: block;
-    margin-left: auto;
-    border: none;
-    background-color: transparent;
-    color: #ffffff;
-  }
+	.btn {
+		display: block;
+		margin-left: auto;
+		border: none;
+		background-color: transparent;
+		color: #ffffff;
+	}
 }
