--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -1,381 +1,168 @@
 .hero {
-  position: relative;
-  padding: 56px 0 250px 0;
-  background-color: #014e56;
+	position: relative;
+	padding: 56px 0 250px 0;
+	background-color: #014e56;
 }
 
 .hero::before {
-  position: absolute;
-  top: calc(50% - 200px);
-  left: calc(50% - 770px);
-  width: 100px;
-  height: 200px;
-  background-image: url("../images/header-bg-left1x.png");
-  content: "";
+	position: absolute;
+	top: calc(50% - 200px);
+	left: calc(50% - 844px);
+	width: 100px;
+	height: 200px;
+	background-image: url('../images/header-bg-left1x.png');
+	content: '';
 }
 
 .hero::after {
-  position: absolute;
-  right: calc(50% - 555px);
-  bottom: calc(50% - 253px);
-  width: 358px;
-  height: 100px;
-  background-image: url("../images/header-bg-bottom1x.png");
-  content: "";
+	position: absolute;
+	right: calc(50% - 555px);
+	bottom: calc(50% - 253px);
+	width: 358px;
+	height: 100px;
+	background-image: url('../images/header-bg-bottom1x.png');
+	content: '';
 }
 
 .hero__inner {
-  @include display-starter;
-  justify-content: space-between;
+	@include display-starter;
+	justify-content: space-between;
 }
 
 .title-wrapper {
-  width: 50%;
-  max-width: 635px;
-  margin-right: 30px;
+	width: 50%;
+	max-width: 635px;
+	margin-right: 30px;
 }
 
 .hero__title {
-  margin: 0;
-  font-weight: 700;
-  font-size: 100px;
-  line-height: 100%;
-  color: #ffffff;
+	margin: 0;
+	font-weight: 700;
+	font-size: 100px;
+	line-height: 100%;
+	color: #ffffff;
 }
 
 .title-red {
-  color: #f67e7e;
+	color: #f67e7e;
 }
 
 .text-wrapper {
-  position: relative;
-  padding-top: 79px;
-  width: 100%;
-  max-width: 445px;
+	position: relative;
+	padding-top: 79px;
+	width: 100%;
+	max-width: 445px;
 }
 
 .hero__text {
-  margin: 0;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 156%;
-  color: #ffffff;
+	margin: 0;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 156%;
+	color: #ffffff;
 }
 
 .line {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 50px;
-  height: 4px;
-  background-color: #79c8c7;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 50px;
+	height: 4px;
+	background-color: #79c8c7;
 }
 
-@media only screen and (max-width: 956px) {
-  .hero::before {
-    display: none;
-  }
+@include max-width(768px) {
+	.hero {
+		padding: 48px 0 256px 0;
 
-  .hero::after {
-    right: calc(50% - 477px);
-    bottom: calc(50% - 234px);
-  }
+		&::before {
+			display: none;
+		}
 
-  .title-wrapper {
-    width: 48%;
-    max-width: 600px;
-  }
+		&::after {
+			top: 426px;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			margin: 0 auto;
+		}
+	}
 
-  .hero__title {
-    font-size: 80px;
-  }
+	.hero__inner {
+		flex-direction: column;
+	}
 
-  .text-wrapper {
-    padding-top: 50px;
-    max-width: 425px;
-  }
+	.title-wrapper {
+		width: 50%;
+		max-width: 683px;
+		margin-bottom: 24px;
+	}
+
+	.hero__title {
+		font-size: 64px;
+		text-align: center;
+	}
+
+	.text-wrapper {
+		padding-top: 0;
+		width: 100%;
+		max-width: 457px;
+	}
+
+	.hero__text {
+		font-size: 15px;
+		text-align: center;
+	}
+
+	.line {
+		display: none;
+	}
 }
 
-@media only screen and (max-width: 850px) {
-  .hero::before {
-    display: none;
-  }
+@include max-width(576px) {
+	.hero {
+		padding: 32px 0 197px 0;
 
-  .hero::after {
-    right: calc(50% - 424px);
-    bottom: calc(50% - 235px);
-  }
+		&::before {
+			display: none;
+		}
 
-  .title-wrapper {
-    width: 49%;
-    max-width: 590px;
-  }
+		&::after {
+			top: 321px;
+			right: 0;
+			left: 0;
+			bottom: 0;
+			margin: 0 auto;
+		}
+	}
 
-  .hero__title {
-    font-size: 70px;
-  }
+	.title-wrapper {
+		width: 40%;
+		max-width: 327px;
+		margin-bottom: 18px;
+	}
 
-  .text-wrapper {
-    padding-top: 50px;
-    max-width: 410px;
-  }
+	.hero__title {
+		font-size: 40px;
+	}
+
+	.text-wrapper {
+		max-width: 327px;
+	}
 }
 
-@media only screen and (max-width: 800px) {
-  .hero {
-    padding: 48px 0 256px 0;
-    background-color: #014e56;
+@media only screen and(-webkit-min-device-pixel-ratio: 2),
+	only screen and (min--moz-device-pixel-ratio: 2),
+	only screen and (-o-min-device-pixel-ratio: 2/1),
+	only screen and (min-device-pixel-ratio: 2),
+	only screen and (min-resolution: 192dpi),
+	only screen and (min-resolution: 2dppx) {
+	.hero::before {
+		background-image: url('../images/header-bg-left@2x.png');
+	}
 
-    &::before {
-      display: none;
-    }
-
-    &::after {
-      right: 0;
-      left: 0;
-      top: 425px;
-      bottom: 0;
-      margin: 0 auto;
-    }
-  }
-
-  .hero__inner {
-    flex-direction: column;
-  }
-
-  .title-wrapper {
-    width: 40%;
-    max-width: 683px;
-    margin-bottom: 24px;
-  }
-
-  .hero__title {
-    font-size: 64px;
-    line-height: 88%;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 457px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    line-height: 187%;
-    text-align: center;
-  }
-
-  .line {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 747px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 414px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-
-  .title-wrapper {
-    width: 40%;
-    max-width: 660px;
-    margin-bottom: 24px;
-  }
-
-  .hero__title {
-    font-size: 58px;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 430px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 681px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 400px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-
-  .title-wrapper {
-    width: 40%;
-    max-width: 600px;
-    margin-bottom: 20px;
-  }
-
-  .hero__title {
-    font-size: 52px;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 400px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 614px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 393px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-
-  .title-wrapper {
-    width: 40%;
-    max-width: 560px;
-    margin-bottom: 20px;
-  }
-
-  .hero__title {
-    font-size: 48px;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 380px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 576px) {
-  .hero {
-    padding: 32px 0 197px 0;
-
-    &::after {
-      right: 0;
-      left: 0;
-      top: 337px;
-      bottom: 0;
-      margin: 0 auto;
-    }
-  }
-
-  .title-wrapper {
-    width: 45%;
-    max-width: 400px;
-    margin-bottom: 18px;
-  }
-
-  .hero__title {
-    font-size: 44px;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 327px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 472px) {
-  .title-wrapper {
-    width: 50%;
-    max-width: 400px;
-    margin-bottom: 18px;
-  }
-}
-
-@media only screen and (max-width: 464px) {
-  .hero {
-    padding: 32px 0 197px 0;
-
-    &::after {
-      right: 0;
-      left: 0;
-      top: 330px;
-      bottom: 0;
-      margin: 0 auto;
-    }
-  }
-
-  .title-wrapper {
-    width: 50%;
-    max-width: 327px;
-    margin-bottom: 18px;
-  }
-
-  .hero__title {
-    font-size: 40px;
-    text-align: center;
-  }
-
-  .text-wrapper {
-    padding-top: 0;
-    width: 100%;
-    max-width: 327px;
-  }
-
-  .hero__text {
-    font-size: 15px;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 392px) {
-  .hero::after {
-    right: 0;
-    left: 0;
-    top: 330px;
-    bottom: 0;
-    margin: 0 auto;
-  }
-
-  .title-wrapper {
-    width: 60%;
-    max-width: 327px;
-    margin-bottom: 18px;
-  }
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-  only screen and (min--moz-device-pixel-ratio: 2),
-  only screen and (-o-min-device-pixel-ratio: 2/1),
-  only screen and (min-device-pixel-ratio: 2),
-  only screen and (min-resolution: 192dpi),
-  only screen and (min-resolution: 2dppx) {
-  .hero::before {
-    background-image: url("../images/header-bg-left@2x.png");
-  }
-
-  .hero::after {
-    background-image: url("../images/header-bg-bottom@2x.png");
-  }
+	.hero::after {
+		background-image: url('../images/header-bg-bottom@2x.png');
+	}
 }
