--- a/css/main.css
+++ b/css/main.css
@@ -373,16 +373,6 @@ main {
   padding: 0 20px;
 }
 
-@media only screen and (max-witdh: 768px) and (min-width: 576px) {
-  .container {
-    pad: 0 40px;
-  }
-}
-@media only screen and (max-witdh: 576px) and (min-width: 375px) {
-  .container {
-    pad: 0 24px;
-  }
-}
 .site-header {
   padding: 73px;
   background-color: #014e56;
@@ -487,7 +477,7 @@ main {
 .hero::before {
   position: absolute;
   top: calc(50% - 200px);
-  left: calc(50% - 844px);
+  left: calc(50% - 760px);
   width: 100px;
   height: 200px;
   background-image: url("../images/header-bg-left1x.png");
@@ -510,7 +500,7 @@ main {
   justify-content: space-between;
 }
 
-.title-wrapper {
+.hero__title-wrapper {
   width: 50%;
   max-width: 635px;
   margin-right: 30px;
@@ -553,6 +543,22 @@ main {
   background-color: #79c8c7;
 }
 
+@media only screen and (max-width: 1100px) {
+  .hero::after {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .hero::after {
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: 0 auto;
+  }
+}
 @media only screen and (max-width: 768px) {
   .hero {
     padding: 48px 0 256px 0;
@@ -561,7 +567,6 @@ main {
     display: none;
   }
   .hero::after {
-    top: 426px;
     right: 0;
     left: 0;
     bottom: 0;
@@ -600,7 +605,6 @@ main {
     display: none;
   }
   .hero::after {
-    top: 321px;
     right: 0;
     left: 0;
     bottom: 0;
@@ -634,7 +638,7 @@ main {
 
 .build::after {
   position: absolute;
-  right: calc(50% - 844px);
+  right: calc(50% - 760px);
   bottom: calc(50% - 314px);
   width: 100px;
   height: 244px;
@@ -726,13 +730,10 @@ main {
   opacity: 0.8;
 }
 
-@media only screen and (max-width: 768px) {
-  .build {
-    padding: 100px 0 100px 98px;
-  }
+@media only screen and (max-width: 1200px) {
   .build::after {
-    top: calc(50% - 355px);
-    right: calc(50% - 384px);
+    top: 0;
+    right: 0;
   }
   .build__inner {
     flex-direction: column;
@@ -751,6 +752,34 @@ main {
   }
   .build__item {
     width: 573px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .build {
+    padding: 100px 0 100px 98px;
+  }
+  .build::after {
+    top: 0;
+    right: 0;
+  }
+  .build__inner {
+    flex-direction: column;
+  }
+  .build__content {
+    width: 100%;
+    max-width: 390px;
+    margin-bottom: 64px;
+  }
+  .build__line {
+    margin-bottom: 32px;
+  }
+  .build__title {
+    font-size: 32px;
+    line-height: 100%;
+  }
+  .build__item {
+    width: 573px;
   }
 }
 @media only screen and (max-width: 576px) {
@@ -758,8 +787,8 @@ main {
     padding: 64px 0 64px 24px;
   }
   .build::after {
-    top: calc(50% - 536px);
-    right: calc(50% - 288px);
+    top: 0;
+    right: 0;
   }
   .build__content {
     width: 100%;
@@ -815,7 +844,7 @@ main {
 .stories::before {
   position: absolute;
   top: calc(50% - 372px);
-  left: calc(50% - 844px);
+  left: calc(50% - 760px);
   width: 147px;
   height: 100px;
   background-image: url("../images/stories-before-bg1x.png");
@@ -826,7 +855,7 @@ main {
 
 .stories::after {
   position: absolute;
-  right: calc(50% - 844px);
+  right: calc(50% - 760px);
   bottom: calc(50% - 372px);
   width: 200px;
   height: 100px;
@@ -836,7 +865,7 @@ main {
   content: "";
 }
 
-.title-wrapper {
+.stories__title-wrapper {
   width: 100%;
   max-width: 932px;
   margin: 0 auto;
@@ -936,17 +965,51 @@ main {
   color: #ffffff;
 }
 
+@media only screen and (max-width: 1100px) {
+  .stories::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 147px;
+    height: 100px;
+    background-image: url("../images/stories-before-bg1x.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    content: "";
+  }
+  .stories::after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 200px;
+    height: 100px;
+    background-image: url("../images/stories-after-bg1x.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    content: "";
+  }
+}
+@media only screen and (max-width: 900px) {
+  .stories::before {
+    top: 0;
+    left: 0;
+  }
+  .stories::after {
+    right: 0;
+    bottom: 0;
+  }
+}
 @media only screen and (max-width: 768px) {
   .stories {
     padding: 100px 98px 178px 97px;
   }
   .stories::before {
-    top: calc(50% - 603px);
-    left: calc(50% - 384px);
+    top: 0;
+    left: 0;
   }
   .stories::after {
-    right: calc(50% - 384px);
-    bottom: calc(50% - 602px);
+    right: 0;
+    bottom: 0;
   }
   .title-wrapper {
     width: 100%;
@@ -989,12 +1052,12 @@ main {
     padding: 140px 24px 242px;
   }
   .stories::before {
-    top: calc(50% - 655px);
-    left: calc(50% - 286px);
+    top: 0;
+    left: 0;
   }
   .stories::after {
-    right: calc(50% - 287px);
-    bottom: calc(50% - 653px);
+    right: 0;
+    bottom: 0;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
