--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,29 +1,29 @@
 html {
-  scroll-behavior: smooth;
-  height: 100%;
+	scroll-behavior: smooth;
+	height: 100%;
 }
 
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 0;
-  font-family: "Livvic", "Arial", sans-serif;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	font-family: 'Livvic', 'Arial', sans-serif;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
-  vertical-align: middle;
-  object-fit: cover;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+	object-fit: cover;
 }
 
 main {
-  flex-grow: 1;
+	flex-grow: 1;
 }
