--- a/scss/blocks/_stories.scss
+++ b/scss/blocks/_stories.scss
@@ -7,7 +7,7 @@
 .stories::before {
 	position: absolute;
 	top: calc(50% - 372px);
-	left: calc(50% - 844px);
+	left: calc(50% - 760px);
 	width: 147px;
 	height: 100px;
 	background-image: url('../images/stories-before-bg1x.png');
@@ -18,7 +18,7 @@
 
 .stories::after {
 	position: absolute;
-	right: calc(50% - 844px);
+	right: calc(50% - 760px);
 	bottom: calc(50% - 372px);
 	width: 200px;
 	height: 100px;
@@ -28,7 +28,7 @@
 	content: '';
 }
 
-.title-wrapper {
+.stories__title-wrapper {
 	width: 100%;
 	max-width: 932px;
 	margin: 0 auto;
@@ -125,18 +125,56 @@
 	color: #ffffff;
 }
 
+@include max-width(1100px) {
+	.stories::before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 147px;
+		height: 100px;
+		background-image: url('../images/stories-before-bg1x.png');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		content: '';
+	}
+
+	.stories::after {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		width: 200px;
+		height: 100px;
+		background-image: url('../images/stories-after-bg1x.png');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		content: '';
+	}
+}
+
+@include max-width(900px) {
+	.stories::before {
+		top: 0;
+		left: 0;
+	}
+
+	.stories::after {
+		right: 0;
+		bottom: 0;
+	}
+}
+
 @include max-width(768px) {
 	.stories {
 		padding: 100px 98px 178px 97px;
 
 		&::before {
-			top: calc(50% - 603px);
-			left: calc(50% - 384px);
+			top: 0;
+			left: 0;
 		}
 
 		&::after {
-			right: calc(50% - 384px);
-			bottom: calc(50% - 602px);
+			right: 0;
+			bottom: 0;
 		}
 	}
 
@@ -190,13 +228,13 @@
 		padding: 140px 24px 242px;
 
 		&::before {
-			top: calc(50% - 655px);
-			left: calc(50% - 286px);
+			top: 0;
+			left: 0;
 		}
 
 		&::after {
-			right: calc(50% - 287px);
-			bottom: calc(50% - 653px);
+			right: 0;
+			bottom: 0;
 		}
 	}
 }
