--- a/css/main.css
+++ b/css/main.css
@@ -547,8 +547,6 @@ main {
   .hero::after {
     right: 0;
     bottom: 0;
-    left: 0;
-    margin: 0 auto;
   }
 }
 @media only screen and (max-width: 900px) {
@@ -578,10 +576,10 @@ main {
   .title-wrapper {
     width: 50%;
     max-width: 683px;
-    margin-bottom: 24px;
   }
   .hero__title {
     font-size: 64px;
+    margin-bottom: 24px;
     text-align: center;
   }
   .text-wrapper {
@@ -1058,6 +1056,22 @@ main {
   .stories::after {
     right: 0;
     bottom: 0;
+  }
+  .stories__item {
+    padding-top: 35px;
+  }
+  .stories__item::before {
+    top: 0;
+    margin: 0 auto;
+  }
+  .stories__item::after {
+    margin-bottom: 16px;
+  }
+  .stories__item:nth-child(1):after {
+    margin-bottom: 16px;
+  }
+  .stories__item:nth-child(2):after {
+    margin-bottom: 16px;
   }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
