--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -11,6 +11,8 @@
 	width: 100px;
 	height: 200px;
 	background-image: url('../images/header-bg-left1x.png');
+	background-repeat: no-repeat;
+	background-size: 100%;
 	content: '';
 }
 
@@ -21,6 +23,8 @@
 	width: 358px;
 	height: 100px;
 	background-image: url('../images/header-bg-bottom1x.png');
+	background-repeat: no-repeat;
+	background-size: 100%;
 	content: '';
 }
 
@@ -163,6 +167,24 @@
 
 	.text-wrapper {
 		max-width: 327px;
+	}
+}
+
+@include max-width(448px) {
+	.hero::after {
+		position: absolute;
+		right: 0;
+		left: 0;
+		margin: 0 auto;
+		background-image: url('../images/header-bg-bottom1x.png');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		content: '';
+	}
+
+	.hero__inner {
+		width: 100%;
+		max-width: 100%;
 	}
 }
 
