--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,7 @@ template {
 html {
   scroll-behavior: smooth;
   height: 100%;
+  overflow-x: hidden;
 }
 
 *,
@@ -374,7 +375,7 @@ main {
 }
 
 .site-header {
-  padding: 73px;
+  padding: 73px 0;
   background-color: #014e56;
 }
 
@@ -1029,6 +1030,12 @@ main {
   .stories::after {
     right: 0;
     bottom: 0;
+  }
+  .stories .stories__item:nth-child(1):before {
+    margin-bottom: 10px;
+  }
+  .stories .stories__item:nth-child(2):before {
+    margin-bottom: 10px;
   }
   .title-wrapper {
     width: 100%;
