--- a/css/main.css
+++ b/css/main.css
@@ -389,6 +389,16 @@ main {
   margin-right: 80px;
 }
 
+.logo:hover {
+  opacity: 0.8;
+  transition: all 0.3s ease;
+}
+
+.logo:active {
+  opacity: 0.6;
+  transition: all 0.3s ease;
+}
+
 .navbar__list {
   display: flex;
   align-items: center;
@@ -407,6 +417,16 @@ main {
   font-size: 18px;
   line-height: 156%;
   color: #ffffff;
+}
+
+.navbar__link:hover {
+  color: #f67e7e;
+  transition: all 0.3s ease;
+}
+
+.navbar__link:active {
+  opacity: 0.6;
+  transition: all 0.3s ease;
 }
 
 .header__link {
@@ -749,6 +769,12 @@ main {
   opacity: 0.8;
 }
 
+@media only screen and (max-width: 1400px) {
+  .build::after {
+    bottom: 0;
+    right: 0;
+  }
+}
 @media only screen and (max-width: 1200px) {
   .build::after {
     top: 0;
@@ -985,6 +1011,16 @@ main {
   color: #ffffff;
 }
 
+@media only screen and (max-width: 1400px) {
+  .stories::before {
+    top: 0;
+    left: 0;
+  }
+  .stories::after {
+    right: 0;
+    bottom: 0;
+  }
+}
 @media only screen and (max-width: 1100px) {
   .stories::before {
     position: absolute;
@@ -1114,5 +1150,323 @@ main {
   }
   .stories__item:nth-child(3)::after {
     background-image: url("../images/Oval_3@2x.png");
+  }
+}
+.started {
+  position: relative;
+  padding: 76px 0;
+  background-color: #f67e7e;
+}
+.started::before {
+  position: absolute;
+  bottom: calc(50% - 101px);
+  left: calc(50% - 760px);
+  width: 200px;
+  height: 144px;
+  background-image: url("../images/Group-8.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  content: "";
+}
+
+.started__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.started__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 100%;
+  color: #012f34;
+}
+
+.started__link {
+  width: 100%;
+  max-width: 153px;
+  display: inline-block;
+  margin-left: 0;
+  border: 2px solid #012f34;
+  color: #012f34;
+}
+
+.started__link:hover {
+  background-color: #012f34;
+  color: #ffffff;
+  transition: all 0.3s ease;
+}
+
+.started__link:active {
+  background-color: transparent;
+  color: #012f34;
+  opacity: 0.25;
+  transition: all 0.3s ease;
+}
+
+@media only screen and (max-width: 1200px) {
+  .started::before {
+    bottom: 0;
+    left: 0;
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .started::before {
+    bottom: 0;
+    left: 0;
+    height: 122px;
+  }
+  .started__inner {
+    justify-content: center;
+  }
+  .started__title {
+    font-size: 32px;
+    margin-right: 120px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .started::before {
+    bottom: 0;
+    left: 0;
+    height: 122px;
+  }
+  .started__title {
+    font-size: 32px;
+    margin-right: 64px;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .started {
+    padding: 83px 0;
+  }
+  .started::before {
+    bottom: 0;
+    left: 0;
+    height: 122px;
+  }
+  .started__inner {
+    flex-direction: column;
+    align-items: center;
+  }
+  .started__title {
+    margin-right: 0;
+    margin-bottom: 24px;
+    text-align: center;
+  }
+  .started__link {
+    margin: 0 auto;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .started::before {
+    background-image: url("../images/Group-8@2x.png");
+  }
+}
+.site-footer {
+  padding: 48px 0;
+  background-color: #002529;
+}
+
+.site-footer__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site-footer__left-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.footer__menu-wrapper {
+  margin-right: 125px;
+}
+
+.footer__logo {
+  display: inline-block;
+  margin-bottom: 25px;
+}
+
+.footer__logo:hover {
+  opacity: 0.8;
+  transition: all 0.3s ease;
+}
+
+.footer__logo:active {
+  opacity: 0.6;
+  transition: all 0.3s ease;
+}
+
+.footer__list {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.footer__item + .footer__item {
+  margin-left: 40px;
+}
+
+.footer__link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 156%;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer__link:hover {
+  color: #f67e7e;
+  transition: all 0.3s ease;
+}
+
+.footer__link:active {
+  opacity: 0.6;
+  transition: all 0.3s ease;
+}
+
+.footer__address-wrapper {
+  width: 40%;
+  max-width: 445px;
+}
+
+.site-footer__adress {
+  margin: 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 167%;
+  color: #ffffff;
+  mix-blend-mode: normal;
+  opacity: 0.6;
+}
+
+.footer__tel {
+  display: block;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 167%;
+  color: #ffffff;
+  mix-blend-mode: normal;
+  opacity: 0.9;
+}
+
+.footer__social-link-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.footer__social-link {
+  display: inline-block;
+  margin-bottom: 51px;
+  fill: #ffffff;
+}
+
+.footer__social-link + .footer__social-link {
+  margin-left: 16px;
+}
+
+.footer__social-link:hover {
+  fill: #f67e7e;
+  transition: all 0.3s ease;
+}
+
+.footer__social-link:active {
+  opacity: 0.6;
+  transition: all 0.3s ease;
+}
+
+.footer__text {
+  margin: 0;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 167%;
+  color: #ffffff;
+  mix-blend-mode: normal;
+  opacity: 0.6;
+}
+
+@media only screen and (max-width: 768px) {
+  .site-footer {
+    padding: 56px 0;
+  }
+  .site-footer__inner {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .site-footer__left-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .footer__menu-wrapper {
+    margin-right: 0;
+    margin-bottom: 33px;
+  }
+  .footer__link {
+    font-size: 15px;
+  }
+  .footer__address-wrapper {
+    width: 100%;
+    max-width: 280px;
+    text-align: right;
+    margin-bottom: 43px;
+  }
+  .site-footer__adress {
+    font-size: 15px;
+  }
+  .footer__tel {
+    font-size: 15px;
+  }
+  .site-footer__right-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .footer__social-link-wrapper {
+    justify-content: flex-start;
+  }
+  .footer__social-link {
+    margin-bottom: 0;
+  }
+  .footer__text {
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .site-footer {
+    padding: 66px 0;
+  }
+  .site-footer__left-wrapper {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .footer__menu-wrapper {
+    justify-content: center;
+    margin-bottom: 24px;
+  }
+  .footer__list {
+    justify-content: center;
+  }
+  .footer__address-wrapper {
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
+  .site-footer__adress {
+    text-align: center;
+  }
+  .site-footer__right-wrapper {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  .footer__social-link-wrapper {
+    margin: 0 auto;
+  }
+  .footer__text {
+    margin-top: 16px;
+    text-align: center;
   }
 }/*# sourceMappingURL=main.css.map */
