--- a/scss/blocks/_build.scss
+++ b/scss/blocks/_build.scss
@@ -134,6 +134,20 @@
 	}
 }
 
+@include max-width(800px) {
+	.build__conwrapper {
+		width: 90%;
+	}
+
+	.build__list {
+		width: 90%;
+	}
+
+	.build__item {
+		width: 90%;
+	}
+}
+
 @include max-width(768px) {
 	.build {
 		padding: 100px 0 100px 98px;
