Add new about.html page, images and scss files

--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -6,3 +6,12 @@
 @import 'stories';
 @import 'started';
 @import 'footer';
+
+// about-page
+
+@import 'about-header';
+@import 'about-hero';
+@import 'about-directors';
+@import 'about-clients';
+@import 'about-started';
+@import 'about-footer';
