--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -9,8 +9,8 @@
 	list-style-type: none;
 }
 
-@mixin container($max-width, $min-width) {
-	@media only screen and (max-witdh: $max-width) and (min-width: $min-width) {
+@mixin width($max-width, $min-width) {
+	@media only screen and (max-width: $max-width) and (min-width: $min-width) {
 		@content;
 	}
 }
