--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -4,3 +4,15 @@
 	margin: 0 auto;
 	padding: 0 20px;
 }
+
+@include width(768px, 577px) {
+	.container {
+		padding: 0 40px;
+	}
+}
+
+@include width(576px, 375px) {
+	.container {
+		padding: 0 24px;
+	}
+}
