--- a/scss/blocks/_build.scss
+++ b/scss/blocks/_build.scss
@@ -150,7 +150,7 @@
 
 @include max-width(768px) {
 	.build {
-		padding: 100px 0 100px 98px;
+		padding: 100px 0;
 
 		&::after {
 			top: 0;
@@ -163,6 +163,7 @@
 	}
 
 	.build__content {
+		margin: 0 auto;
 		width: 100%;
 		max-width: 390px;
 		margin-bottom: 64px;
@@ -177,8 +178,14 @@
 		line-height: 100%;
 	}
 
+	.build__list {
+		margin: 0 auto;
+	}
+
 	.build__item {
-		width: 573px;
+		width: 100%;
+		max-width: 573px;
+		margin: 0 auto;
 	}
 }
 
@@ -202,6 +209,14 @@
 		text-align: start;
 	}
 
+	.build__list {
+		margin: 0 auto;
+	}
+
+	.build__conwrapper {
+		margin: 0 auto;
+	}
+
 	.build__item {
 		width: 100%;
 		max-width: 327px;
@@ -222,11 +237,13 @@
 	}
 
 	.build__item-title {
+		margin: 0 auto;
 		margin-bottom: 8px;
 		text-align: center;
 	}
 
 	.build__item-text {
+		margin: 0 auto;
 		text-align: center;
 	}
 }
